# darktable_path_mapper

./: .gitignore  README.md  funcs.py  main.py  pyproject.toml  utils.py
config/: mapping_library.json
